[package]
name = "plier"
version = "0.1.0"
authors = ["shaolang <shaolang@ymail.com>"]
edition = "2018"

[lib]
name = "plier"
path = "src/plier/lib.rs"
doctest = false

[[bin]]
name = "plier"

[dependencies]
toml = "0.5.6"
serde = "^1.0"
serde_derive = "^1.0"
clap = "3.0.0-beta.1"

[dev-dependencies]
indoc = "0.3"
